add_executable(Test_intern_protocol test_intern_protocol.c)
target_link_libraries(Test_intern_protocol SERVER_LIB)
target_link_libraries(Test_intern_protocol ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Test_intern_protocol readline)

add_executable(Test_parser test_parser.c)
target_link_libraries(Test_parser SERVER_LIB)
target_link_libraries(Test_parser ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(Test_parser readline)
